@@ -20,6 +20,8 @@ Release 1.23
      HEIF / HEIC images (TIKA-2942).
 
    * Add an XLZ Parser (TIKA-2976).
+   
+   * Fix deadlock with ForkParser when InputStream throws IOException (TIKA-2892).
 
 Release 1.22 - 07/29/2019
 
